[project]
name = "pycontractz"
version = "0.1.0"
requires-python = ">= 3.13"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
tests = ["pytest"]

[build-system]
requires = ["setuptools>=61.2", "wheel"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs*", "tests*"]

[tool.black]
target-version = ["py313"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]